[BUGFIX] Wrong height for .t3-row-header
Also compress the final CSS files.

Releases: 2.0.0
Reviewed-on: http://review.typo3.org/32100
Tested-by: Wouter Wolters <typo3@wouterwolters.nl>

--- a/Resources/Private/Sass/mod1_default.scss
+++ b/Resources/Private/Sass/mod1_default.scss
@@ -326,10 +326,6 @@ div {
 	}
 }
 
-.t3-page-ce-header, .t3-row-header {
-	height: 20px;
-}
-
 .tpm-localisation-info-table {
 	tr {
 		&.bgColor4 {
